--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!--Your Name 
-	Date
-    Month
+<!--Darrell Liles 
+	07/18/15
+   
 -->
 <html>
 <head>
@@ -14,10 +14,10 @@
 
 <div id="container">
   <header> 
-      <h1>Title</h1>
+      <h1>Weather Underground API</h1>
   </header>
   
-  <div>
+<div>
   
     <h2>Current Conditions</h2>
       <p>
@@ -54,21 +54,31 @@
   
 </div><!--Closes Container-->
 
+		
+		
+		<!--Link to jQuery library-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
 
+		<!--Link to main js file-->
+<script type="text/javascript" src="js/main.js"></script>
+
+  
+  
+  
+  
   <script>
 
-    <!--This is an example. Use your own API key and city location.  Copy and paste the url in your browser. It will display the needed information in a JSON file.  Use the keys to display the information on your page-->	
-	
-    //	$.ajax({                             
-    //		url : "http://api.wunderground.com/api/YourAPIKeyHere/forecast/geolookup/conditions/q/MD/Baltimore.json",
-    //		dataType : "json", 
-    //          success : function(parsed_json) { 
-    //              var location = parsed_json['location']['city']; 
-    //              var temp_f = parsed_json['current_observation']['temp_f'];
-    //                  $(".class").html("Current temperature in " + location + " is: " + temp_f+"ºF");
-    //          } 
-    //	}); 
+   
+    	$.ajax({                             
+    		url : "http://api.wunderground.com/api/41e6452d25e7b1f9/conditions/q/CA/San_Francisco.json",
+    			dataType : "json", 
+                success : function(parsed_json) { 
+                    var location = parsed_json['location']['city']; 
+                    var temp_f = parsed_json['current_observation']['temp_f'];
+                        $(".class").html("Current temperature in " + location + " is: " + temp_f+"ºF");
+                } 
+      	}); 
 
   </script>
 </body>
